# contrastive-unpaired-translation

./: .gitignore  README.md  TENSORBOARD_MIGRATION.md  environment.yml  example_shell.sh  inference.py  pyproject.toml  requirements.txt  test.py  test_package.py  test_tensorboard.py  train.py
cut/: __init__.py
cut/_scripts/: __init__.py  inference.py  test.py  train.py
cut/data/: __init__.py  single_dataset.py  singleimage_dataset.py  template_dataset.py  unaligned_dataset.py
cut/models/: __init__.py  base_model.py  cut_model.py  cycle_gan_model.py  networks.py  sincut_model.py  stylegan_networks.py  template_model.py
cut/options/: __init__.py  base_options.py  option_stats.py  test_options.py  train_options.py
cut/scripts/: __init__.py  test.py  train.py
cut/util/: __init__.py  visualizer.py
models/: base_model.py  cut_model.py  networks.py
options/: base_options.py  train_options.py
scripts_on_cluster/20250711_parameter_sweep/: gen_batch_scripts.py  submit_all.sh  template.run
scripts_on_cluster/20250721_parameter_sweep/: gen_batch_scripts.py  submit_all.sh  template.run
util/: visualizer.py
