[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "contrastive-unpaired-translation"
version = "0.1.0"
description = "PyTorch implementation of Contrastive Learning for Unpaired Image-to-Image Translation (CUT)"
authors = ["Taesung Park <tspark1601@gmail.com>"]
readme = "README.md"
homepage = "http://taesung.me/ContrastiveUnpairedTranslation/"
repository = "https://github.com/taesungp/contrastive-unpaired-translation"
keywords = ["pytorch", "computer-vision", "image-translation", "gan", "contrastive-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
packages = [{include = "cut"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = ">=2.0,<3"
torch = "==2.9.*"  # 2.9 required by torchvision
torchvision = "==0.24.*"  # specific to torch 2.9
dominate = ">=2.4.0,<3"
tensorboard = ">=2.0.0,<3"
packaging = ">=25,<26"
GPUtil = ">=1.4.0,<2"
wandb = "==0.21.1"
Pillow = ">=11.3.0,<12"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
flake8 = "*"
mypy = "*"

[tool.poetry.urls]
"Paper" = "https://arxiv.org/pdf/2007.15651"
